fixed collapsable navbar

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -171,4 +171,9 @@ body {
   #contact {
     background-attachment: fixed;
   }
+
+  #main-nav {
+    padding-left: 48px !important;
+    padding-right: 48px !important;
+  }
 }
